# labgas-manager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.MD  TODO.MD  pyproject.toml
.github/: dependabot.yml
.github/workflows/: daily-backup.yml  mysql-backup.yml
backend/: app.py  config.py  requirements.txt
backend/routes/: auth.py  leitura.py
backend/utils/: decorators.py
database/: DIAGRAM.MD  backup_user.sql  migration_amostra_v2.sql  migration_amostra_v3.sql  migration_amostra_v4.sql  migration_v5_indices.sql  migration_v6_composite_indices.sql  rls.sql  schema.sql  seed.sql
database/migrations/: 20260620_add_login_history.sql
frontend/: .env.example  app.py  pytest.ini  requirements.txt  vercel.json
frontend/blueprints/: admin.py  amostra.py  auth.py  cilindro.py  elemento.py  helpers.py  historico.py  leitura.py  pressao.py
frontend/templates/: admin.html  admin_user_data.html  amostra.html  base.html  cilindro.html  dashboard.html  disclaimer.html  elemento.html  historico.html  leitura.html  login.html  perfil.html  pressao.html  voice_modal.html
frontend/tests/: conftest.py  pytest.ini  test_admin.py  test_amostra.py  test_auth.py  test_backup.py  test_cilindro.py  test_dashboard.py  test_elemento.py  test_export.py  test_leitura.py  test_pressao.py  test_session_footer.py
frontend/utils/: cache_utils.py  constants.py  supabase_utils.py  validators.py
latex/: README.MD  artigo.md  artigo.tex
latex/figuras/: arquitetura.mmd  banco_dados.mmd  (+1 more)
scripts/: backup_db.py  restore_db.py  seed.py  setup_backup_user.py
(+1 files in other folders)
